--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href='/public/pngwing.com.png' />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meals4Gaza</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<html lang="en" data-theme="light">
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href='/public/pngwing.com.png' />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Meals4Gaza</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
